style/style.css
/* CSS Document */

/* Global Style */

.rbclear {
	clear: both;
}
.rblayout {
	line-height: 20px;
	overflow: hidden;
}

/* Profile Results */
#profile-list {
	font-size: 0;
	margin-top: 30px;
}
#profile-list .rbprofile-list {
	width: 33.33333333333333%;
	padding: 10px 20px 20px 0px;
	font-size: 100%;
	max-width: 200px;
	min-width: 150px;
	margin-bottom: 15px;
	position: relative;
	vertical-align: top;
	display: inline-block;
	box-sizing: border-box;
}
#profile-list .rbprofile-list .image {
	width: 100%;
	height: 200px;	
	overflow: hidden;
	text-align: center;
	position: relative;
}
#profile-list .rbprofile-list .image a {
	float: left;
	width: 100%;
	height: 100%;
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center top;
}
#profile-list .rbprofile-list .image img {
	float: left;
	border: none;
	border-radius: 0;
	box-shadow: none;
}
#profile-list .rbprofile-list .image img.fillheight {
	max-height: 100%;
	max-width: none!important;
}
#profile-list .rbprofile-list .image.image-broken {
	height: 200px;
	text-align: center;
	line-height: 200px;
	background: #f8ced6;
}
#profile-list .rbprofile-list .image.image-broken a {
	font-weight: bold;
	text-align: center;
	text-decoration: none;
}
#profile-list .rbprofile-list .profile-info {
	
}
#profile-list .rbprofile-list .profile-info .details {
	font-size: 13px;
}
#profile-list .rbprofile-list .profile-info h3.name {
	margin: 0;
	margin: 5px 0;
	font-size: 13px;
	overflow: hidden;
	line-height: normal;	
}
#profile-list .rbprofile-list .profile-info h3.name a {
	white-space: nowrap;
	text-decoration: none;
	display: inline-block;
}

/* RBLinks */
.rblinks {
	clear: both;
	font-size: 13px;
	padding: 15px 0;
	overflow: hidden;
}
.rblinks .rbprint-download {
	float: left;
}
.rblinks .rbfavorites-castings {
	float: right;
}

/*  */
#profile-results-info {
	float: right;
	padding: 5px 0px;
}

/* Pagination */
.rbpagination-top {
	margin-top: 15px;
}
.rbpagination { 
	float: left;
	clear: left;
	font-size: 13px;
	padding:2px 5px 0px 0px;
}
.rbpagination > span, .rbpagination > a { 
	float: left;
	padding: 3px;		
	color: #989495;
	background: #fff;
	padding: 5px 15px;
	text-align: center;	
	text-decoration: none;
	border: 1px solid #d8d8d8;	
	box-shadow: 0px 1px 1px #d8d8d8;
	border-right: none;
}
.rbpagination > span:last-child, .rbpagination > a:last-child {
	border-right: 1px solid #d8d8d8;
}
.rbpagination > .pagedir:first-child {
	border-top-left-radius: 2px;
	border-top-right-radius: 2px;
}
.rbpagination > .pagedir:last-child {
	border-top-right-radius: 2px;
	border-bottom-right-radius: 2px;
}
.rbpagination > span.current, .rbpagination > a.current {
	font-weight: bold;
}


/* Profile Results Casting */

.favorite-casting .castingcart {
  float:right;
}
.favorite-casting .favorite {
  float:left;
}
.favorite-casting .castingcart a {
  width: 13px;
  height: 12px;
  display: inline-block;
  background: url(../style/icon-sprite.png) no-repeat;
}
.favorite-casting .castingcart a.saved_castingcart {
  background-position: 0 0;
}
.favorite-casting .castingcart a.save_castingcart {
  background-position: 0 -16px;
}
.favorite-casting .favorite a {
  width: 13px;
  height: 12px;
  display: inline-block;
  background: url(../style/icon-sprite.png) no-repeat;  
}
.favorite-casting .favorite a.save_favorite {
	background-position: 0 -48px;
}
.favorite-casting .favorite a.favorited {
  background-position: 0 -31px;
}

/* Search Forms */
.rbsearch-form .search-field {
	clear: both;
	border: none;
	padding: 7px 0;
	max-width: 400px;
	overflow: hidden;
}
.rbsearch-form .search-field.submit {
	padding: 15px 0;
	text-align: center;
}
.rbsearch-form .search-field.single label {
	width: 35%;
	float: left;
}
.rbsearch-form .search-field.single input,
.rbsearch-form .search-field.single select {
	margin: 0;
	width: 62.4%;
	float: left;
}
.rbsearch-form .search-field.single select {
	width: 65%;
}
.rb_agency_widget_showsearch .rbsearch-form .search-field.single select {
	width: 100%;
}
.rbsearch-form .search-field select,
.rbsearch-form .search-field input[type="text"] {
	margin: 0px;
	padding: 5px;
	border: none;
}
.rbsearch-form .search-field.multi legend {
	float: left;
	width: 35%;
}
.rbsearch-form .search-field.multi label {
	float: left;
	width: auto;
	clear: both;
	line-height: normal;
}
.rbsearch-form .search-field.multi div {
	width: 31%;
	float: left;
}
.rbsearch-form .search-field.multi div:last-child {
	float: right;
}
.rbsearch-form .search-field.multi div label {
	width: 100%;
	float: left;
}
.rbsearch-form .search-field.multi div input[type="text"] {
	margin: 0;
	width: 92%;
	float: left;
}
.rbsearch-form .search-field.multi div select {
	width: 100%;
}
.rbsearch-form .search-field.multi label input[type="checkbox"],
.rbsearch-form .search-field.multi label input[type="radio"] {
	margin: 0;
	float: left;
}
.rbsearch-form .search-field.single label, .rbsearch-form .search-field.multi legend {
	font-weight: bold;
}

/* Widget Form */
.rb_agency_widget_showsearch .rbsearch-form .search-field {
	width: 100%;
}
.rb_agency_widget_showsearch .rbsearch-form .search-field.single label {
	width: 100%;
	float: none;
	display: block;
}
.rb_agency_widget_showsearch .rbsearch-form .search-field.single input[type="text"] {
	width: 100%;
	float: none;
	display: block;
}
.rb_agency_widget_showsearch .rbsearch-form .search-field.multi div label {
	width: 100%;
	float: none;
	display: block;
	text-align: left;
}
.rb_agency_widget_showsearch .rbsearch-form .search-field.multi div input[type="text"],
.rb_agency_widget_showsearch .rbsearch-form .search-field.multi div select {
	width: 100%;
	float: left;
}
.rb_agency_widget_showsearch .rbsearch-form .search-field.multi div input[type="text"] {
	text-align: right;
}

/* Dashboard */
#rbdashboard {
	overflow: hidden;
	margin-bottom: 60px;
}
#rbdashboard h1 {
	margin-bottom: 30px;
}
#rbdashboard h2 {
	margin-bottom: 15px;
}
#rbdashboard #profile-info {
	width: 30%;
	float: right;
}
/* ... */

